[package]
name = "my-redis"
version = "0.1.0"
authors = ["avrilko"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atoi = "0.4.0"
bytes = "1.0.1"
structopt = "0.3.21"
tokio = { "version" = "1", "features" = ["full"] }
tracing = "0.1.13"
tracing-futures = { version = "0.2.3" }
tracing-subscriber = "0.2.2"
